--- a/app/frontend/templates/index.html
+++ b/app/frontend/templates/index.html
@@ -590,6 +590,8 @@
     <script src="/static/js/utils/storage-manager.js"></script>
     <script src="/static/js/navbar-manager.js"></script>
     <script src="/static/js/main.js"></script>
+    <!-- Automated Navigation & Console Capture System -->
+    <script src="/static/js/navigation-console-capture.js"></script>
 </body>
 
 </html>
